--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -18,8 +18,11 @@
                 "--model_id", "ETTh1_96_96",
                 "--model", "TSMixer",
                 "--data", "ETTh1",
+                "--freq", "h",
+                "--checkpoints", "./checkpoints/",
+                "--target", "OT",
                 "--features", "M",
-                "--seq_len", "720",
+                "--seq_len", "96",
                 "--pred_len", "96",
                 "--patch_len", "48",
                 "--stride", "48",
